@@ -1,3 +1,9 @@
+2003-05-12  Kevin Vandersloot <kfv101@psu.edu>
+
+	* main.c: run gnome-system-monitor when the applet is double clicked or
+	when enter/space is pressed. Patch by jl1192 at messiah dot edu. Fixes
+	bug #80351
+
 2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* properties.c:  HIGify widget padding.
